--- a/docs/nerva.css
+++ b/docs/nerva.css
@@ -16,18 +16,6 @@ body {
 	background-image: -ms-linear-gradient( 90deg, rgba(85, 168, 191, 1) 0%, rgba(99, 88, 145, 1) 100%);
 	background-image: linear-gradient( 90deg, rgba(85, 168, 191, 1) 0%, rgba(99, 88, 145, 1) 100%);
 }
-footer p {
-	display: none;
-}
-.nav a {
-	color: rgba(99, 88, 145, 1);
-}
-h1,h2,h3,h4{
-	color: rgba(99, 88, 145, 1);
-}
-.navbar-default .navbar-nav > li > a {
-	color: #fff;
-}
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
 	color: #fff;
 	font-weight: bold;
@@ -42,4 +30,7 @@ h1,h2,h3,h4{
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
 	background-color: rgba(0,0,0,0.1);
 	color: #fff;
+}
+.nav-link,h1,h2,h3,h4,h5{
+	color: #486282;
 }
